<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Awaaz</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btitle">Load Contacts</string>
     
    <string name="menu_settings">Settings</string>


  
   <string name="audio">Set Audio Profiles</string>
   <string name="Ring">Put on Ringing Mode</string>
   <string name="Vibrate">Put on Vibrate Mode</string>
   <string name="Silent">Put on Silent Mode</string>
   

   <string name="Recording">Android Audio Recording Application</string>
   <string name="start">Start Recording</string>
   <string name="stop">Stop Recording</string>
   <string name="play">Play recording</string>
<string name="choose_lang">Choose Language</string>
 
  <string-array name="lang">
    <item>ENGLISH</item>
    <item>FRENCH</item>
    <item>GERMAN</item>
    <item>ITALIAN</item>    
  </string-array>
</resources>