<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="ring"
        android:text="@string/Ring"
        android:background="@android:color/holo_orange_dark" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/button4"
        android:layout_below="@+id/button4"
        
        android:onClick="vibrate"
        android:text="@string/Vibrate" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button2"
        android:onClick="silent"
        android:text="@string/Silent"
        android:background="@android:color/holo_green_dark" />

</RelativeLayout>